--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
         "typescript": "^5.4.5"
     },
     "dependencies": {
+        "@types/node": "^20.14.9",
         "concurrently": "^8.2.2",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "pg": "^8.12.0",
+        "reflect-metadata": "^0.2.2",
+        "typeorm": "^0.3.20"
     }
 }
